fix padding on tablet styles

--- a/static/main.css
+++ b/static/main.css
@@ -117,7 +117,7 @@ h1 span{
   display: block;
 }
 
-.content h2{
+.single .content h2{
   padding: 0;
 }
 
